feat: 完成用户管理模块 - 添加用户列表查询、参数校验、权限控制、错误处理和国际化支持

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,2 +1,10 @@
-error.invalid.credentials=Invalid username or password
+# Error messages
 error.system.internal=Internal server error
+error.access.denied=Access denied
+error.unauthorized=Unauthorized access
+error.invalid.credentials=Invalid username or password
+
+# Validation messages
+error.page.number.min=Page number must be greater than or equal to 1
+error.page.size.min=Page size must be greater than or equal to 1
+error.page.size.max=Page size must be less than or equal to 100
