--- a/src/main/resources/i18n/messages_zh_CN.properties
+++ b/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,2 +1,10 @@
-error.invalid.credentials=用户名或密码错误
+# Error messages
 error.system.internal=系统内部错误
+error.access.denied=访问被拒绝
+error.unauthorized=未授权的访问
+error.invalid.credentials=用户名或密码错误
+
+# Validation messages
+error.page.number.min=页码必须大于等于1
+error.page.size.min=每页大小必须大于等于1
+error.page.size.max=每页大小不能超过100
