增加商品管理功能相关接口

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -8,3 +8,9 @@ error.invalid.credentials=Invalid username or password
 error.page.number.min=Page number must be greater than or equal to 1
 error.page.size.min=Page size must be greater than or equal to 1
 error.page.size.max=Page size must be less than or equal to 100
+
+# Product validation messages
+error.product.name.empty=Product name cannot be empty
+error.product.category.empty=Product category cannot be empty
+error.product.price.empty=Product price cannot be empty
+error.product.price.min=Product price must be greater than or equal to 0.01
