--- a/src/main/resources/i18n/messages_zh_CN.properties
+++ b/src/main/resources/i18n/messages_zh_CN.properties
@@ -8,3 +8,9 @@ error.invalid.credentials=用户名或密码错误
 error.page.number.min=页码必须大于等于1
 error.page.size.min=每页大小必须大于等于1
 error.page.size.max=每页大小不能超过100
+
+# Product validation messages
+error.product.name.empty=商品名称不能为空
+error.product.category.empty=商品类别不能为空
+error.product.price.empty=商品价格不能为空
+error.product.price.min=商品价格必须大于等于0.01
